--- a/index.html
+++ b/index.html
@@ -1,42 +1,41 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>300CAIN</title>
-    <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body, html { height: 100%; overflow: hidden; background: #000; }
-        #ytvideo { position: fixed; top: 50%; left: 50%; min-width: 100%; min-height: 100%; width: auto; height: auto; transform: translateX(-50%) translateY(-50%); z-index: 0; filter: brightness(0.7) hue-rotate(330deg) saturate(2); }
-        .overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 1; background: rgba(0,0,0,0.5); display: flex; flex-direction: column; justify-content: center; align-items: center; }
-        h1 { font-size: 8rem; letter-spacing: 15px; text-shadow: 0 0 60px #ff0000; animation: glow 1s infinite alternate, shake 0.3s infinite; color: #ff0000; font-family: 'Courier New', monospace; }
-        @keyframes glow { from { text-shadow: 0 0 50px #ff0000; } to { text-shadow: 0 0 120px #ff0000, 0 0 180px #800000; } }
-        @keyframes shake { 0%, 100% { transform: translate(0); } 50% { transform: translate(12px, -12px); } }
-        .btn { font-size: 4rem; padding: 50px 120px; border: 8px double #ff0000; background: transparent; color: #ff0000; cursor: pointer; letter-spacing: 20px; transition: 1s; z-index: 10; font-family: 'Courier New', monospace; text-transform: uppercase; }
-        .btn:hover { transform: scale(1.5) rotate(8deg); background: #ff0000; color: #000; box-shadow: 0 0 140px #ff0000; }
-        #player { z-index: 10; margin-top: 50px; width: 90%; max-width: 600px; opacity: 0; transition: opacity 1.5s; border-radius: 10px; }
-        .active { opacity: 1; }
-        @media (max-width: 768px) { h1 { font-size: 4.5rem; } .btn { font-size: 2.5rem; padding: 30px 60px; } }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>300CAIN</title>
+<style>
+*{margin:0;padding:0;box-sizing:border-box}
+body,html{height:100%;overflow:hidden;background:#000}
+#yt{position:fixed;top:50%;left:50%;min-width:100%;min-height:100%;width:auto;height:auto;transform:translate(-50%,-50%);z-index:0;filter:brightness(.7)hue-rotate(330deg)saturate(2)}
+.o{position:fixed;top:0;left:0;width:100%;height:100%;z-index:1;background:rgba(0,0,0,.5);display:flex;flex-direction:column;justify-content:center;align-items:center}
+h1{font-size:8rem;letter-spacing:15px;color:#ff0000;text-shadow:0 0 60px #ff0000;animation:g 1s infinite alternate,s .3s infinite;font-family:Courier New,monospace}
+@keyframes g{from{textadiation:0 0 50px #ff0000}to{text-shadow:0 0 120px #ff0000,0 0 180px #800000}}
+@keyframes s{0%,100%{transform:translate(0)}50%{transform:translate(12px,-12px)}}
+.b{font-size:4rem;padding:50px 120px;border:8px double #ff0000;background:transparent;color:#ff0000;cursor:pointer;letter-spacing:20px;z-index:10;font-family:Courier New,monospace;text-transform:uppercase}
+.b:hover{transform:scale(1.5) rotate(8deg);background:#ff0000;color:#000;box-shadow:0 0 140px #ff0000}
+#p{z-index:10;margin-top:50px;width:90%;max-width:600px;opacity:0;transition:opacity 1.5s;border-radius:10px}
+.a{opacity:1}
+@media(max-width:768px){h1{font-size:4.5rem}.b{font-size:2.5rem;padding:30px 60px}}
+</style>
 </head>
 <body>
-    <iframe id="ytvideo" src="https://www.youtube.com/embed/heXnc8XUNw4?autoplay=1&mute=1&loop=1&playlist=heXnc8XUNw4&controls=0&modestbranding=1&rel=0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    <div class="overlay">
-        <h1>300CAIN</h1>
-        <div class="btn" id="btn">ŞARKI İÇİN DOKUN 😈</div>
-        <iframe id="player" src="https://open.spotify.com/embed/track/3hOaMUSbw3H4RYFJ6w7F8R?utm_source=generator&theme=0" width="100%" height="352" frameborder="0" allow="autoplay; encrypted-media"></iframe>
-    </div>
-    <script>
-        const btn = document.getElementById('btn');
-        const player = document.getElementById('player');
-        const overlay = document.querySelector('.overlay');
-        btn.onclick = function() {
-            btn.remove();
-            player.classList.add('active');
-            overlay.style.background = 'rgba(50,0,0,0.7)';
-            document.getElementById('ytvideo').style.filter = 'brightness(1) hue-rotate(0deg) saturate(1.5)';
-            document.querySelector('h1').style.animation = 'shake 0.2s infinite';
-        };
-    </script>
+
+<iframe id="yt" src="https://www.youtube.com/embed/heXnc8XUNw4?autoplay=1&mute=1&loop=1&playlist=heXnc8XUNw4&controls=0&modestbranding=1&rel=0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+<div class="o">
+  <h1>300CAIN</h1>
+  <div class="b" id="b">ŞARKI İÇİN DOKUN 😈</div>
+  <iframe id="p" src="https://open.spotify.com/embed/track/3hOaMUSbw3H4RYFJ6w7F8R?utm_source=generator&theme=0" width="100%" height="352" frameborder="0" allow="autoplay; encrypted-media"></iframe>
+</div>
+
+<script>
+document.getElementById('b').onclick=()=>{
+  document.getElementById('b').remove();
+  document.getElementById('p').classList.add('a');
+  document.querySelector('.o').style.background='rgba(50,0,0,.7)';
+  document.getElementById('yt').style.filter='brightness(1) saturate(1.5)';
+}
+</script>
 </body>
 </html>
