--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-<!DOCTYPE html><html lang="tr"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>300CAIN</title><style>*{margin:0;padding:0;box-sizing:border-box}body,html{height:100%;overflow:hidden;background:#000}#v{position:fixed;top:50%;left:50%;min-width:100%;min-height:100%;width:auto;height:auto;transform:translate(-50%,-50%);z-index:0;filter:brightness(.7) hue-rotate(330deg) saturate(2)}.o{position:fixed;top:0;left:0;width:100%;height:100%;z-index:1;background:rgba(0,0,0,.5);display:flex;flex-direction:column;justify-content:center;align-items:center}h1{font-size:8rem;letter-spacing:15px;color:#ff0000;text-shadow:0 0 60px #ff0000;animation:g 1s infinite alternate;font-family:Courier New,monospace}@keyframes g{from{text-shadow:0 0 50px #ff0000}to{text-shadow:0 0 120px #ff0000}}.b{font-size:4rem;padding:50px 120px;border:8px double #ff0000;background:transparent;color:#ff0000;cursor:pointer;letter-spacing:20px;z-index:10;font-family:Courier New,monospace;text-transform:uppercase}.b:hover{transform:scale(1.5);background:#ff0000;color:#000;box-shadow:0 0 140px #ff0000}#s{z-index:10;margin-top:50px;width:90%;max-width:600px;opacity:0;transition:opacity 1.5s}.a{opacity:1}@media(max-width:768px){h1{font-size:4.5rem}.b{font-size:2.5rem;padding:30px 60px}}</style></head><body><video id="v" autoplay muted loop playsinline><source src="https://assets.mixkit.co/videos/preview/mixkit-red-smoke-in-black-background-3609-large.mp4" type="video/mp4"></video><div class="o"><h1>300CAIN</h1><div class="b" id="b">ŞARKI İÇİN DOKUN 😈</div><iframe id="s" src="https://open.spotify.com/embed/track/3hOaMUSbw3H4RYFJ6w7F8R" width="100%" height="352" frameborder="0" allow="autoplay; encrypted-media"></iframe></div><script>document.getElementById('b').onclick=()=>{document.getElementById('b').remove();document.getElementById('s').classList.add('a');document.querySelector('.o').style.background='rgba(50,0,0,.7)';document.getElementById('v').style.filter='brightness(1) saturate(1.5)'}</script></body></html>
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>300CAIN</title>
+<style>
+*{margin:0;padding:0;box-sizing:border-box}
+body{background:#000;color:#ff0000;font-family:Courier New,monospace;height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;overflow:hidden}
+h1{font-size:8rem;letter-spacing:15px;text-shadow:0 0 60px #ff0000;animation:g 1s infinite alternate}
+@keyframes g{from{text-shadow:0 0 50px #ff0000}to{text-shadow:0 0 120px #ff0000,0 0 180px #800000}}
+.b{font-size:4rem;padding:50px 120px;border:8px double #ff0000;background:transparent;color:#ff0000;cursor:pointer;letter-spacing:20px}
+.b:hover{transform:scale(1.5);background:#ff0000;color:#000;box-shadow:0 0 140px #ff0000}
+@media(max-width:768px){h1{font-size:4.5rem}.b{font-size:2.5rem;padding:30px 60px}}
+</style>
+</head>
+<body>
+<h1>300CAIN</h1>
+<div class="b" id="b">ŞARKI İÇİN DOKUN 😈</div>
+
+<iframe id="s" src="https://open.spotify.com/embed/track/3hOaMUSbw3H4RYFJ6w7F8R?utm_source=generator&theme=0" 
+        width="90%" height="352" frameborder="0" allow="autoplay; encrypted-media" style="display:none;margin-top:40px;border-radius:12px"></iframe>
+
+<script>
+document.getElementById('b').onclick=()=>{
+  document.getElementById('b').remove();
+  document.getElementById('s').style.display='block';
+  document.body.style.background='radial-gradient(circle,#440000,#000)';
+}
+</script>
+</body>
+</html>
