--- a/index.html
+++ b/index.html
@@ -1,35 +1,44 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>300CAIN</title>
-<style>
-*{margin:0;padding:0;box-sizing:border-box}
-body{background:#000;color:#ff0000;font-family:Courier New,monospace;height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;overflow:hidden}
-h1{font-size:8rem;letter-spacing:15px;text-shadow:0 0 60px #ff0000;animation:g 1s infinite alternate}
-@keyframes g{from{text-shadow:0 0 50px #ff0000}to{text-shadow:0 0 120px #ff0000,0 0 180px #800000}}
-.btn{font-size:4rem;padding:50px 120px;border:8px double #ff0000;background:transparent;color:#ff0000;cursor:pointer;letter-spacing:20px;transition:.5s}
-.btn:hover{transform:scale(1.5);background:#ff0000;color:#000;box-shadow:0 0 140px #ff0000}
-audio{display:none}
-@media(max-width:768px){h1{font-size:4.5rem}.btn{font-size:2.5rem;padding:30px 60px}}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>300CAIN</title>
+    <style>
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        body { background: #000; color: #ff0000; font-family: 'Courier New', monospace; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; overflow: hidden; }
+        h1 { font-size: 8rem; letter-spacing: 15px; text-shadow: 0 0 60px #ff0000; animation: glow 1s infinite alternate; }
+        @keyframes glow { from { text-shadow: 0 0 50px #ff0000; } to { text-shadow: 0 0 120px #ff0000, 0 0 180px #800000; } }
+        .btn { font-size: 4rem; padding: 50px 120px; border: 8px double #ff0000; background: transparent; color: #ff0000; cursor: pointer; letter-spacing: 20px; transition: 1s; text-transform: uppercase; }
+        .btn:hover { transform: scale(1.5); background: #ff0000; color: #000; box-shadow: 0 0 140px #ff0000; }
+        audio { display: none; }
+        body.playing { background: radial-gradient(circle, #440000, #000); }
+        @media (max-width: 768px) { h1 { font-size: 4.5rem; } .btn { font-size: 2.5rem; padding: 30px 60px; } }
+    </style>
 </head>
 <body>
-<h1>300CAIN</h1>
-<div class="btn" onclick="cal()">ŞARKI İÇİN DOKUN 😈</div>
-<audio id="s" src="cain.mp3" preload="auto"></audio>
-<script>
-let oynadi=false;
-function cal(){
-  if(!oynadi){
-    document.getElementById('s').volume=0.9;
-    document.getElementById('s').play();
-    oynadi=true;
-    document.body.style.background='radial-gradient(circle,#440000,#000)';
-    document.querySelector('.btn').innerHTML='ÇALIYOR 🔥';
-  }
-}
-</script>
+    <h1>300CAIN</h1>
+    <div class="btn" onclick="playSong()">ŞARKI İÇİN DOKUN 😈</div>
+
+    <audio id="song" src="cain.mp3" preload="auto"></audio>
+
+    <script>
+        let played = false;
+        function playSong() {
+            if (!played) {
+                const audio = document.getElementById('song');
+                audio.volume = 0.8;
+                audio.play().then(() => {
+                    played = true;
+                    document.body.classList.add('playing');
+                    document.querySelector('.btn').innerHTML = 'ÇALIYOR 🔥';
+                }).catch(e => {
+                    alert('Hata: ' + e.message + ' – MP3 yüklendi mi?');
+                });
+            }
+        }
+        // Mobil için ses izni
+        document.addEventListener('touchstart', () => {}, { once: true });
+    </script>
 </body>
 </html>
